# btCupLACompiler

./: .gitignore  CMakeLists.txt  README.md  outasm.json  output.csv  outputasm.csv  outrun.json  test.py  test.sh  test.sy
include/Hloongarch/: H2L.hpp  HLBlock.hpp  HLFunction.hpp  HLInst.hpp  HLLoc.hpp  HLModule.hpp  HLValue.hpp
include/cminusfc/: cminusf_builder.hpp
include/codegen/: CodeGen.hpp  Register.hpp
include/common/: ast.hpp
include/lightir/: BasicBlock.hpp  Constant.hpp  Function.hpp  GlobalVariable.hpp  IRBuilder.hpp  IRprinter.hpp  Instruction.hpp  Module.hpp  Type.hpp  User.hpp  Value.hpp
include/passes/: ActiveVar.hpp  AgressiveConstProp.hpp  AgressiveLocalComSubExprEli.hpp  AlgeSimplify.hpp  CFGAnalyse.hpp  Check.hpp  ConstProp.hpp  DeadCode.hpp  DeadCodeEliWithBr.hpp  DeadStoreEli.hpp  DominateTree.hpp  FuncInfo.hpp  FuncInline.hpp  InstructionScheduling.hpp  LIR.hpp  LocalComSubExprEli.hpp  LoopExpansion.hpp  LoopInfo.hpp  LoopInvariant.hpp  LoopSearch.hpp  (+10 more)
src/: CMakeLists.txt
src/passes/: ActiveVar.cpp  AgressiveConstProp.cpp  AgressiveLocalComSubExprEli.cpp  AlgeSimplify.cpp  CFGAnalyse.cpp  CMakeLists.txt  Check.cpp  ConstProp.cpp  DeadCode.cpp  DeadCodeEliWithBr.cpp  DeadStoreEli.cpp  DominateTree.cpp  FuncInfo.cpp  FuncInline.cpp  InstructionScheduling.cpp  LIR.cpp  LocalComSubExprEli.cpp  LoopExpansion.cpp  LoopInfo.cpp  LoopInvariant.cpp  LoopSearch.cpp  LoopStrengthReduction.cpp  Mem2Reg.cpp  Pass.cpp  RDominateTree.cpp  RecSeq.cpp  RedundantInstsEli.cpp  StrengthReduction.cpp  TailRecursionElim.cpp  VarLoopExpansion.cpp  utils.cpp
(+29 files in other folders)
